AWS-Bosh-003-SecurityGroups.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Standard Security Groups",

  "Parameters": {
    "DeploymentName": {
      "Type": "String",
      "Description": "Deployment Name",
      "MinLength": "1",
      "MaxLength": "16",
      "AllowedPattern": "^([A-Za-z0-9]+[A-Za-z0-9-]?)+[A-Za-z0-9]$",
      "ConstraintDescription": "Must be a valid domain label matching /^([A-Za-z0-9]+[A-Za-z0-9-])+[A-Za-z0-9]$/"
    }
  },

  "Outputs": {
    "CfSshSecurityGroup": {
      "Description": "Cf Security Group",
      "Value": { "Ref": "CfSshSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-CfSshSecurityGroup" } }
    },
    "DirectorSecurityGroup": {
      "Description": "Director Security Group",
      "Value": { "Ref": "DirectorSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-DirectorSecurityGroup" } }
    },
    "DmzSecurityGroup": {
      "Description": "DMZ Security Groups",
      "Value": { "Ref": "DmzSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-DmzSecurityGroup" } }
    },
    "LbSecurityGroup": {
      "Description": "Load Balancer Security Group",
      "Value": { "Ref": "LbSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-LbSecurityGroup" } }
    },
    "PrivateSecurityGroup": {
      "Description": "Private Security Groups",
      "Value": { "Ref": "PrivateSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-PrivateSecurityGroup" } }
    },
    "RouterSecurityGroup": {
      "Description": "Router Security Groups",
      "Value": { "Ref": "RouterSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-RouterSecurityGroup" } }
    },
    "SmtpSecurityGroup": {
      "Description": "SMTP Outbound Security Groups",
      "Value": { "Ref": "SmtpSecurityGroup" },
      "Export": { "Name": { "Fn::Sub": "${DeploymentName}-SmtpSecurityGroup" } }
    }
  },

  "Conditions": {},

  "Resources": {
    "CfSshSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "CF SSH Security Group",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:CfSshSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "DirectorSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Director Security Group",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:DirectorSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "DmzSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "DMZ In Out",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:DmzSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "LbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Load Balancer Security Group",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:LbSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "PrivateSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Private In Out",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:PrivateSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "RouterSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Router In Out",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:RouterSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    },
    "SmtpSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "SMTP Outbound",
        "VpcId": { "Fn::ImportValue": { "Fn::Sub": "${DeploymentName}-CloudFoundryVpc" } },
        "SecurityGroupEgress": [
          { "CidrIp": "0.0.0.0/0", "FromPort": "25", "ToPort": "25", "IpProtocol": "tcp" },
          { "CidrIp": "0.0.0.0/0", "FromPort": "587", "ToPort": "587", "IpProtocol": "tcp" }
        ],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${DeploymentName}:SmtpSecurityGroup" } },
          { "Key": "deployment", "Value": { "Ref": "DeploymentName" } }
        ]
      }
    }
  }
}
